[package]
name = "micro_png"
license = "LGPL-2.1"
# homepage = ""
# documentation = ""
repository = "https://github.com/js29a/micro_png"
version = "0.3.2"
edition = "2021"
readme = "README.md"
description = "Low-level minimalist HDR APNG writer and HDR PNG reader with just a few dependencies (8,16-RGB(A), 1,2,4,8-palette, 8,16-Grayscale)."
categories = ["multimedia::images"]
keywords = ["png", "apng", "hdr"]

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
futures = "0.3.28"
flate2 = "1.0"
crc32fast = "1.2.0"
quicklz = "0.3.1"
futures-executor = "0.3.28"
