[package]
name = "micro_png"
license = "LGPL-2.1"
# homepage = ""
# documentation = ""
repository = "https://github.com/js29a/micro_png"
version = "0.3.4"
edition = "2021"
readme = "README.md"
description = "Low-level minimalist APNG writer (with Adam7 option) and PNG reader with just a few dependencies. All possible formats are covered (including HDR)."
categories = ["multimedia::images"]
keywords = ["png", "apng", "hdr"]

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
futures = "0.3.28"
flate2 = "1.0"
crc32fast = "1.2.0"
quicklz = "0.3.1"
futures-executor = "0.3.28"
