[package]
name = "micro_png"
license = "LGPL-3.0-only"
homepage = "https://github.com/js29a/micro_png/wiki"
# documentation = ""
repository = "https://github.com/js29a/micro_png"
version = "0.5.0"
edition = "2024"
readme = "README.md"
description = "Low-level minimalist APNG writer and PNG reader with just a few dependencies. All possible formats are covered (including HDR and Adam7)."
categories = ["multimedia::images"]
keywords = ["png", "apng", "hdr"]

[dependencies]
flate2 = "1.0"
crc32fast = "1.2.0"
